--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
         </tfoot>
       </table>
       <br>
-      <button onclick="printSummary()">Print Payroll Summary</button>
-      <button onclick="exportCSV()">Export Payroll to CSV</button>
+      <button onclick="printSummary()">Print Summary</button>
     </div>
   </div>
 
@@ -752,4 +751,5 @@
   </script>
 </body>
 </html>
+
 
